update env config

--- a/.env.local
+++ b/.env.local
@@ -46,6 +46,7 @@
 
 # DATABASE_URL="postgresql://name:pass@127.0.0.1:5432/postgres"
 
+NEXT_PUBLIC_DOMAIN="https:asiatips.net"
 # NEXT_PUBLIC_DOMAIN="http://57.180.42.230"
 # GOOGLE_ANALYTICS="G-VC82HCHCKZ"
 # DATABASE_URL="postgresql://postgres:dobahung6@127.0.0.1:5432/postgres"
@@ -57,7 +58,7 @@ BUCKET_NAME="asiatips"
 AWS_ACCESS_KEY="AKIA2BUSDVAOXKWBME3N"
 AWS_SECRET_ACCESS_KEY="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"
 DATABASE_URL="postgresql://postgres:dobahung6@asiatips-postgres.czqe0khp9qkt.ap-northeast-1.rds.amazonaws.com:5432/postgres"
-NEXT_PUBLIC_DOMAIN="http://localhost:3000"
+# NEXT_PUBLIC_DOMAIN="http://localhost:3000"
 NEXTAUTH_SECRET='3205368a9212c0f2eca4dac97eeb473a'
 
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME='dxrsjkj8m'
